--- a/main.html
+++ b/main.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <form action="" method="post">
+        <label for="Name" >Name *</label>
+        <input type="text" name="Name" id="Name" required>
+        <br>
 
+        <label for="email" >Email *</label>
+        <input type="email" name="Email" id="email" required>
+        <br>
+
+        Gender
+        <input type="radio" name="gender" id="male" value="Male">
+        <label for="male">Male</label>
+
+        <input type="radio" name="gender" id="female" value="Female">
+        <label for="male">Female</label>
+        <br>
+
+        <label for="lap">Laptop Brands</label>
+        <select id="lap" name="lap">
+            <option value="apple">Apple</option>
+            <option value="asus">Asus</option>
+            <option value="hp">HP</option>
+          </select>
+          <br>
+          
+        <label for="age" >Age *</label>
+        <input type="number" name="age" id="age" required>
+        <br>
+
+        <label for="dob" >Date of Birth	*</label>
+        <input type="date" name="dob" id="dob" required>
+        <br>
+
+        <label for="password" >Password *</label>
+        <input type="password" name="password" id="password" required>
+        <br>
+
+        <label for="url" >Portfolio URL</label>
+        <input type="url" name="url" id="url">
+        <br>
+
+        <input type="submit" name="" id="" value="Submit">
+
+        
+
+    </form>
 </body>
-
 </html>
