--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <form action="" method="post">
-        <label for="Name" >Name *</label>
-        <input type="text" name="Name" id="Name" required>
+        <label for="name" >Name *</label>
+        <input type="text" name="name" id="Name" required>
         <br>
 
         <label for="email" >Email *</label>
-        <input type="email" name="Email" id="email" required>
+        <input type="email" name="email" id="email" required>
         <br>
 
         Gender
