--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 <body>
     <form action="" method="post">
         <label for="name" >Name *</label>
-        <input type="text" name="name" id="Name" required>
+        <input type="text" name="Name" id="name" required>
         <br>
 
         <label for="email" >Email *</label>
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="Email" id="email" required>
         <br>
 
         Gender
