--- a/main.html
+++ b/main.html
@@ -16,15 +16,15 @@
         <br>
 
         Gender
-        <input type="radio" name="gender" id="male" value="Male">
+        <input type="radio" name="male" id="gender" value="Male">
         <label for="male">Male</label>
 
-        <input type="radio" name="gender" id="female" value="Female">
+        <input type="radio" name="male" id="ghender" value="Female">
         <label for="male">Female</label>
         <br>
 
-        <label for="lap">Laptop Brands</label>
-        <select id="lap" name="lap">
+        <label for="laptop">Laptop Brands</label>
+        <select id="laptop" name="laptop">
             <option value="apple">Apple</option>
             <option value="asus">Asus</option>
             <option value="hp">HP</option>
