--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
         <br>
 
         Gender
-        <input type="radio" name="male" id="gender" value="Male">
+        <input type="radio" name="gender" id="male" value="Male">
         <label for="male">Male</label>
 
-        <input type="radio" name="male" id="ghender" value="Female">
+        <input type="radio" name="gender" id="female" value="Female">
         <label for="male">Female</label>
         <br>
 
