--- a/main.html
+++ b/main.html
@@ -16,10 +16,10 @@
         <br>
 
         Gender
-        <input type="radio" name="gender" id="male" value="Male">
+        <input type="radio" name="gender" id="male" value="Male" required>
         <label for="male">Male</label>
 
-        <input type="radio" name="gender" id="female" value="Female">
+        <input type="radio" name="gender" id="female" value="Female" required>
         <label for="male">Female</label>
         <br>
 
@@ -47,7 +47,8 @@
         <input type="url" name="url" id="url">
         <br>
 
-        <input type="submit" name="" id="" value="Submit">
+		
+        <input  type="button" value="Submit">
 
         
 
