--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 <body>
     <form action="" method="post">
         <label for="name" >Name *</label>
-        <input type="text" name="Name" id="name" required>
+        <input type="text" name="Name" id="name" required placeholder="	Text Input">
         <br>
 
         <label for="email" >Email *</label>
-        <input type="email" name="Email" id="email" required>
+        <input type="email" name="Email" id="email" required placeholder="Email Input ">
         <br>
 
         Gender
@@ -24,7 +24,7 @@
         <br>
 
         <label for="laptop">Laptop Brands</label>
-        <select id="laptop" name="laptop">
+        <select id="laptop" name="laptop" placeholder=" ">
             <option value="apple">Apple</option>
             <option value="asus">Asus</option>
             <option value="hp">HP</option>
@@ -32,19 +32,19 @@
           <br>
           
         <label for="age" >Age *</label>
-        <input type="number" name="age" id="age" required>
+        <input type="number" name="age" id="age" required placeholder=" Number Input">
         <br>
 
         <label for="dob" >Date of Birth	*</label>
         <input type="date" name="dob" id="dob" required>
         <br>
 
-        <label for="password" >Password *</label>
-        <input type="password" name="password" id="password" required>
+        <label for="password" >Password *</label > 
+        <input type="password" name="password" id="password" required placeholder=" 	Password Input">
         <br>
 
         <label for="url" >Portfolio URL</label>
-        <input type="url" name="url" id="url">
+        <input type="url" name="Portfolio URL" id="url" placeholder=" 	URL Input">
         <br>
 
 		
