--- a/main.html
+++ b/main.html
@@ -43,8 +43,8 @@
         <input type="password" name="password" id="password" required placeholder=" 	Password Input">
         <br>
 
-        <label for="url" >Portfolio URL</label>
-        <input type="url" name="Portfolio URL" id="url" placeholder=" 	URL Input">
+        <label for="portfolio" >Portfolio URL</label>
+        <input type="url" name="portfolio" id="portfolio" placeholder=" 	URL Input">
         <br>
 
 		
